--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "9.5"
+    },
+    "require": {
+        "phpoffice/phpspreadsheet": "^5.0"
     }
 }
