Handel Solid Priniples Issues and Make design patterns into project flexiblity and Maintainable

--- a/env.example
+++ b/env.example
@@ -12,7 +12,7 @@ DB_DATABASE=invoices
 # DB_TYPE=mysql
 # DB_HOST=localhost
 # DB_PORT=3306
-# DB_DATABASE=invoices
+# DB_DATABASE=invoices or invoices_db
 # DB_USERNAME=root
 # DB_PASSWORD=
 
